[package]
name = "mouchard"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = { version = "2.1.0" }
actix-web = { version = "3.2.0" }
env_logger = { version = "0.8.1" }
log = { version = "0.4.8" }
serde = { features = ["derive"], version = "1.0" }
serde_json = { version = "1.0" }

[dev-dependencies]
actix-rt = "1.0"
env-test-util = "1.0.1"
serial_test = "0.5"